--- a/rockets/index.html
+++ b/rockets/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
-    <script src="p5.js"></script>
+    <script src="../p5.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
