--- a/cars/index.html
+++ b/cars/index.html
@@ -11,6 +11,7 @@
 <body>
 <div id="container">
     <main id="canvas" width="900" height="1100"></main>
+    <div id="safe-button" onclick="saveResults()"> SAVE </div>
     <div id="generationInfo" class="generationContainer"></div>
 </div>
 </body>
